--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -4,8 +4,9 @@ name: CI Docker
 
 # Controls when the action will run. 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
