--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,12 @@ jobs:
       with:
         go-version: 1.15
 
+    - name: Install Swag CLI 
+      run: go get -u github.com/swaggo/swag/cmd/swag
+
+    - name: Generate Swagger documentation
+      run: swag init
+      
     - name: Build
       run: go build -v ./...
 
